# demos

./: .gitignore  CMakeLists.txt  README.html  README.md  README.txt  train-a-face-detector.lua
_xLearn-demos/: README-train  face-detect-multiscale.lua  face-detect-segmented.lua  face-detect-singlescale.lua  face-detect-w-attention.lua  face-detect.ui  faces-attention.ui  live-kinect.lua  live-segm+sift.lua  live-segm+sift.ui  live-segm.lua  live-segm.ui  live-sift.lua  live-sift.ui  multithreaded.lua  opencv-tester.lua  opencv-tester.ui  temporal-diff.lua  test-cam.lua  test-opticalFlow.lua  test-segmentation.lua  test-stereo.lua  train-on-faces.lua  train-on-mnist-hessian.lua  train-on-mnist.lua  trainAutoencoder.lua
attention/: README.md  attention.lua  attention.ui
face-detector/: PyramidPacker.lua  PyramidUnPacker.lua  face.net  face.net.ascii  g.ui  run.lua  slideshow.html
face-detector-elab/: HDg.ui  PyramidUnPacker.lua  model.net  run.lua
face-detector-new/: PyramidPacker.lua  face.net  run.lua
filter-bank/: g.ui  run.lua
flow/: run.lua
gabor-layer-demo /: GaborLayer.lua  frame.ui  gabortest.lua
linear-regression/: LinearRegression-test.lua  LinearRegression.lua  example-linear-regression.lua
live-kinect/: g.ui  run.lua
load-data/: load-image.lua  load-images.lua
logistic-regression/: Csv-test.lua  Csv.lua  LogisticRegression-test.lua  LogisticRegression.lua  Trainer.lua  Validations.lua  csv-test.lua  example-logistic-regression-using-class-LogisticRegression.lua  example-logistic-regression.csv  example-logistic-regression.lua  trainer.lua  (+11 more)
(+78 files in other folders)
